# pyserver-tools

./: CONTRIBUTING.md  README.md  pyproject.toml
src/pyserver_tools/: apps.py  base_model_test.py  base_views.py  mixins.py  permissions.py  utils.py
src/pyserver_tools/management/commands/: create_pyserver_groups.py
src/pyserver_tools/templates/: 400.html  403.html  404.html  500.html
src/pyserver_tools/templates/tools_templates/: 403.html  404.html  create_model.html  delete_model.html  detail_model.html  error.html  list_models.html  update_model.html
src/pyserver_tools/templatetags/: pyserver_tags.py
src/pyserver_tools/tests/: test_permissions.py
